app/css/dashboard-style.less
* {
  margin: 0;
  padding: 0;
}
.delete-button {
  background-image: url("/assets/img/delete-button1.svg");
  background-size: contain;
}
.edit-button {
  background-image: url("/assets/img/edit-button.svg");
}
.back-button {
  background-image: url("/assets/img/back-button.svg");
}
.done-button {
  background-image: url("/assets/img/done-button.svg");
  background-size: contain;
}
.plus-button {
  background-image: url("/assets/img/plus-button.svg");
  background-size: contain;
}

.dashboard {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  justify-self: center;
  width: 100%;
  height: 100%;
  margin: 0px auto;
  // border: red solid 1px;
}
.widget {
  // border: red solid 1px;
  display: flex;
  flex-direction: column;
  width: 270px;
  height: 270px;
  margin: 20px;
  visibility: none;

  // background-color: #99e2d0;
  // background: linear-gradient(red, transparent),linear-gradient(to top left, lime, transparent),linear-gradient(to top right, blue, transparent);
  border-radius: 7px;
  box-shadow: 1px 1px 12px #585858;
  .background {
    border: red solid 1px;
    display: inline-flex;
    position: absolute;
    width: 270px;
    height: 270px;
    border-radius: 7px;
    background-size: contain;
    background-blend-mode: screen;
    background-repeat: no-repeat;
    opacity: 0.2;
    z-index: -1;
  }
  h1 {
    // border: red solid 1px;
    display: flex;
    justify-content: center;
    font-size: 20px;
  }
  .content {
    // border: red solid 1px;
    display: flex;
    justify-content: center;
    height: 180px;
  }
  .row {
    // border: blue solid 1px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    width: 100%;
    height: 60px;
    margin: auto;
  }
  .button-container {
    display: flex;
    margin: auto;
    height: 23px;
    width: 23px;
    background-repeat: no-repeat;
    z-index: 1;
  }
}
.edit {
  // border: blue solid 1px;
  h1 {
    // border: blue solid 1px;
    display: flex;
    flex-direction: row;
    width: 100%;
  }
  .content {
    flex-direction: column;
    .row {
      // border: blue solid 1px;
      display: flex;
      width: 100%;
      height: 35px;
    }
    .category {
      // border: blue solid 1px;
      display: flex;
      margin: auto;
    }
  }
}
.append {
  .content {
    //   border: blue solid 1px;
    height: 100%;
    width: 80%;
    //   flex-direction: column;
    margin: 0 auto;
    align-items: center;
    background-repeat: no-repeat;
  }
}

